<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:cw="http://schemas.android.com/apk/res-auto"
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
             android:background="@drawable/settings_background">
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <FrameLayout
                android:layout_width="fill_parent"
                android:layout_height="0dip"
                android:layout_weight="1">
            <ImageView
                    android:id="@+id/current_profile_pic"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:scaleType="centerCrop"/>
            <TextView
                    android:id="@+id/no_profile_pic_text"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:visibility="gone"
                    android:background="@android:color/black"
                    android:padding="50dip"
                    android:text="@string/no_profile_pic"
                    android:textColor="#fff"
                    android:textSize="@dimen/message_text_size"
                    android:gravity="center"
                    android:lineSpacingExtra="@dimen/message_text_spacing"/>
        </FrameLayout>
        <FrameLayout
                android:layout_width="fill_parent"
                android:layout_height="0dip"
                android:layout_weight="1">
            <TextView
                    android:id="@+id/change_profile_pic_bottom_panel_text"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:padding="50dip"
                    android:text="@string/change_profile_pic_bottom_text"
                    android:textSize="@dimen/message_text_size"
                    android:gravity="center"
                    android:textColor="#fff"
                    android:lineSpacingExtra="@dimen/message_text_spacing"/>
        </FrameLayout>
    </LinearLayout>
    <com.chatwala.android.ui.CwButton
            android:id="@+id/take_profile_picture_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            cw:cw_button_size="100dp">

        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="#fff"
                android:text="@string/change_profile_pic"/>

    </com.chatwala.android.ui.CwButton>
</FrameLayout>