<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:cw="http://schemas.android.com/apk/res-auto"
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
             android:background="@drawable/settings_background">
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <FrameLayout
                android:layout_width="fill_parent"
                android:layout_height="0dip"
                android:layout_weight="1">
            <TextView
                    android:id="@+id/feedback_text"
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent"
                    android:padding="50dip"
                    android:text="@string/feedback_intial_text"
                    android:textColor="#fff"
                    android:textSize="@dimen/message_text_size"
                    android:gravity="center"/>
        </FrameLayout>
        <FrameLayout
                android:layout_width="fill_parent"
                android:layout_height="0dip"
                android:layout_weight="1"/>
    </LinearLayout>
    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

        <com.chatwala.android.ui.CwButton
                android:id="@+id/feedback_yes"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center"
                cw:cw_button_size="100dp">

            <TextView
                    android:id="@+id/feedback_yes_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textColor="#fff"
                    android:textSize="@dimen/message_text_size"
                    android:text="@string/feedback_yes"/>

        </com.chatwala.android.ui.CwButton>

        <com.chatwala.android.ui.CwButton
                android:id="@+id/feedback_no"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_gravity="center"
                cw:cw_button_size="100dp">

            <TextView
                    android:id="@+id/feedback_no_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textColor="#fff"
                    android:textSize="@dimen/message_text_size"
                    android:text="@string/feedback_no"/>

        </com.chatwala.android.ui.CwButton>

    </LinearLayout>
</FrameLayout>